@@ -69,9 +69,8 @@ We make sure that File::Util is going to work on your computer or virtual
 machine.  If you run Windows, Mac, Linux, BSD, some flavor of Unix, etc...
 File::Util should work right out of the box.  There are currently no platforms
 where Perl runs that we do not support.  If Perl can run on it, File::Util
-can run on it.  File::Util's ability to support multiple platforms will
-probably be affected as it begins to include more and more support for
-Unicode, however.
+can run on it.  If you want unicode support, however, you need to at least
+be running Perl 5.8 or better.
 
 =item B<Be compatible>
 
@@ -117,10 +116,6 @@ that File::Util does not give you out of the box, such as searching for files by
 owner/group or size.  It is possible to accomplish the same things by
 taking advantage of File::Util's callbacks if you want to, but this isn't
 the "one thing" File::Util was built to do.
-
-File::Util also doesn't offer unicode support yet.  If you want to write files
-in UTF-8 encoding, File::Util won't do that for you.  This will not always be
-the case, but for the time being it is a limitation.
 
 I<*Sometimes it doesn't matter how fast you can search through a directory 1000>
 I<times.  Performance alone isn't the best criteria for choosing a module.>
@@ -1358,6 +1353,19 @@ check performed for you.  In such a case, you'll have to call binmode() on
 the filehandle yourself.  Once you pass a filehandle to this method it has no
 way of telling if the file opened to that filehandle is binary or not.
 
+=item C<< binmode => [ boolean or 'utf8' ] >>
+
+Tell File::Util to read the file in binmode (if set to a true boolean: B<C<1>>),
+or to read the file as UTF-8 encoded data, specify a value of B<C<utf8>> to this
+option.  I<(see L<perlfunc/binmode>)>.
+
+You need Perl 5.8 or better to use C<'utf8'> or your program will fail with
+an error message.
+
+Example Usage:
+
+   my $encoded_data = $ftl->load_file( 'encoded.txt' => { binmode => 'utf8' } );
+
 =item C<< read_limit => positive integer >>
 
 Override the global read limit setting for the File::Util object you are working
@@ -1700,11 +1708,18 @@ C<sysopen()>'d filehandles!
 
 =over
 
-=item C<< binmode => boolean >>
+=item C<< binmode => [ boolean or 'utf8' ] >>
 
-Makes sure that CORE::binmode() is called on the filehandle when your content
-is written.  This is useful for times when the content you are writing to file
-is a binary stream. I<(see L<perlfunc/binmode>)>.
+Tell File::Util to open the file in binmode (if set to a true boolean: B<C<1>>),
+or to open the file with UTF-8 encoding, specify a value of B<C<utf8>> to this
+option.  I<(see L<perlfunc/binmode>)>.
+
+You need Perl 5.8 or better to use C<"utf8"> or your program will fail with
+an error message.
+
+Example Usage:
+
+   $ftl->open_handle( 'encoded.txt' => { binmode => 'utf8' } );
 
 =item C<< no_lock => boolean >>
 
@@ -1919,6 +1934,11 @@ Syntax Examples:
 
       -OR-
 
+   # write a file with UTF-8 encoding (unicode character support)
+   $ftl->write_file( 'encoded.txt' => $encoded_data => { binmode => 'utf8' } );
+
+      -OR-
+
    $ftl->write_file(
       {
          file    => '/gotham/city/ballots/Bruce_Wayne.txt',
@@ -1936,7 +1956,12 @@ value or not.  This is a function of Perl, not File::Util.
 
 [string] should be a string or a scalar variable containing a string.  The
 string can be any type of data, such as a binary stream, or ascii text with
-line breaks, etc.  Be sure to enable the C<binmode> option for binary streams.
+line breaks, etc.  Be sure to enable the C<< binmode => 1 >> option for binary
+streams, and be sure to specify a value of C<< binmode => 'utf8' >> for UTF-8
+encoded data.
+
+NOTE: that you will need Perl version 5.8 or better to use the C<'utf8'>
+feature, or your program will fail with an error.
 
 If specified, the bitmask must be supplied in the form of an octal number,
 as required by the native perl umask function.  I<see L<perlfunc/"umask">>
@@ -1980,11 +2005,18 @@ to the end of the file.
 
 =over
 
-=item C<< binmode => boolean >>
+=item C<< binmode => [ boolean or 'utf8' ] >>
 
-Makes sure that CORE::binmode() is called on the filehandle when your content
-is written.  This is useful for times when the content you are writing to file
-is a binary stream.
+Tell File::Util to write the file in binmode (if set to a true boolean: B<C<1>>),
+or to write the file with UTF-8 encodeding, specify a value of B<C<utf8>> to this
+option.  I<(see L<perlfunc/binmode>)>.
+
+You need Perl 5.8 or better to use C<"utf8"> or your program will fail with
+an error message.
+
+Example Usage:
+
+   $ftl->write_file( 'encoded.txt' => $encoded_data => { binmode => 'utf8' } );
 
 =item C<< empty_writes_OK => boolean >>
 
