@@ -6,7 +6,7 @@ use Test::More;
 
 if ( $ENV{RELEASE_TESTING} || $ENV{AUTHOR_TESTING} || $ENV{AUTHOR_TESTS} )
 {                            # the tests in this file have a higher probability
-   plan tests => 66;          # of failing in the wild, and so are reserved for
+   plan tests => 68;          # of failing in the wild, and so are reserved for
                              # the author/maintainers as release tests
    CORE::eval # hide the eval...
    '
@@ -651,6 +651,18 @@ like( $f->_throw( 'empty error' => { diag => 1 } ),
 like( $f->_throw( 'empty error' => { } ),
    qr/(?sm)^Failed with an empty error-type designation\./,
    'empty error'
+);
+
+# 32
+like( $f->_throw( 'no unicode' => { diag => 1 } ),
+   qr/(?sm)can't read\/write with \(binmode => 'utf8'\)/,
+   'no unicode support (diagnostic mode)'
+);
+
+# 32.5
+like( $f->_throw( 'no unicode' => { } ),
+   qr/(?sm)^Your version of Perl is not new enough/,
+   'no unicode support'
 );
 
 exit;
